[gd_scene load_steps=5 format=3 uid="uid://4h6cqgjyqlqh"]

[ext_resource type="Script" path="res://Scripts/Ground.gd" id="1_smash"]
[ext_resource type="Texture2D" uid="uid://cet4cekw32tsa" path="res://Assets/base.png" id="2_62iay"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxpfh"]
size = Vector2(523, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyfoj"]
size = Vector2(334, 20)

[node name="Ground" type="Node2D"]
script = ExtResource("1_smash")

[node name="Ground1" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ground1"]
texture = ExtResource("2_62iay")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
position = Vector2(92.5, -44)
shape = SubResource("RectangleShape2D_fxpfh")

[node name="Ground2" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ground2"]
position = Vector2(336, 0)
texture = ExtResource("2_62iay")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(336, -44)
shape = SubResource("RectangleShape2D_uyfoj")

[connection signal="body_entered" from="Ground1" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Ground2" to="." method="_on_body_entered"]
